site/css/page.css
@import url("/css/common.css");

body {
	background: url(/images/background.png) repeat top right;
	font-family: sans-serif;
	font-size: 0.9em;
}

#page {
	float: left;
}

#banner {
	float: left;
	width: 100%;
	padding: 0;
	margin: 0;
}

#logo {
	clear: both;
	margin: 40px;
}

#banner_flowers {
	float: right;
	margin: 0 15% 0 0;
}

#content {
	float: left;
	padding: 1em;
	width: 60%;
	color: black;
	background-color: white;
	border: 20px solid black;
}

#content span.history {
	float: right;
}

#content h1 {
	width: 100%;
	margin: 0 0 0.3em 0;
	border-bottom: 2px solid black;
	color: #bd0000;
	font-size: 1.6em;
}

#content h2 {
	width: 100%;
	margin: 0 0 0.3em 0;
	border-bottom: 1px dashed black;
	color: black;
	font-size: 1.2em;
}

#footer {
	float: right;
	clear: left;
	padding: 0;
	margin: 3% 0 0 3%;
	height: 180px;
	color: gray;
	text-align: center;
	font-size: x-small;
	list-style: none;
}

#footer a {
	color: gray;
}

#footer_left {
	float: left;
	display: inline;
	padding: 0;
	margin: 0;
	width: 146px;
	height: 180px;
	background-image: url(/images/footer_left.png);
	background-repeat: no-repeat;
}

#footer_middle {
	float: left;
	display: inline;
	padding: 59px 1em 0 1em;
	margin: 0;
	height: 121px;
	background-image: url(/images/footer_top.png);
	background-repeat: repeat-x;
	background-position: top left;
	background-color: white;
}

@media print {
	body {
		margin: 0;
		padding: 0;
	}

	#banner {
		display: none;
	}

	ul.menu {
		display: none;
	}

	#content {
		clear: both;
		width: 90%;
		border: none;
	}

	#content h1.section {
		color: black;
	}

	#content div.note {
		border: 1px dashed black;
	}

	#content div.warning {
		border: 1px dashed black;
	}

	#content pre.code {
		border: 1px solid black;
	}

	#content pre.shell {
		border: 1px solid black;
	}

	#footer {
		float: center;
		clear: both;
		list-style: none;
	}

	#footer_left {
		display: none;
	}

	#footer_middle {
		text-align: center;
	}

	#footer_right {
		display: none;
	}
}

